[project]
name = "pfund-ibapi"
version = "10.42.1"
description = "Interactive Brokers TWS Python API repackaged for easy install"
license = { file = "LICENSE" }
authors = [
    { name = "IBG LLC", email = "api@interactivebrokers.com" },
    { name = "Stephen Yau", email = "softwareentrepreneer+pfund-ibapi@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "protobuf==5.29.5",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ibapi"
module-root = ""
